--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <label for="lname">Last name:</label><br>
     <input type="text" id="lname" name="lname">
   </form>
+
+  <p>New Feature </p>
 </body>
 </html>
